...
        Expanded(
          //flex:1,
          child:   new Container(
            alignment: Alignment.bottomLeft,

            child: FlatButton(
              key: Key("ForgotPasswordInput"),
              onPressed: () {
//                Navigator.pushNamed(context, '/ResetPassword');
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (BuildContext context) => ResetPasswordView()),
                );
              },
              textColor: Color(0xff009999),
              child: Text('Forgot Password?'),
            ),
          ),
        ),
        //emailField,
        Expanded(
          //flex:2,
          child: SizedBox(
            height: 15,
          ),
        ),
...
            key: Key('emailField'),
            controller: _emailController,
            obscureText: false,

            validator: (value) {
              if (value.isEmpty) {
                return 'Please enter an email address.';
              }
              return null;
            },
            style: style,
            decoration: InputDecoration(
                contentPadding: EdgeInsets.fromLTRB(20.0, 15.0, 20.0, 15.0),
...
            height: 15,
          ),
        ),
        Expanded(
          //flex:1,
          child:  new TextFormField(
            key: Key('passwordField'),
            controller: _passwordController,
            obscureText: widget.isHidden,
            validator: (val) => val.isEmpty ? 'Password cannot be empty.' : null,
            style: style,
            decoration: InputDecoration(
                fillColor: Colors.white,
                contentPadding: EdgeInsets.fromLTRB(20.0, 15.0, 20.0, 15.0),
                hintText: "Password",
                border: OutlineInputBorder(
                  borderRadius: BorderRadius.circular(32.0),
                ),
                suffixIcon: IconButton(
                  key: Key('toggle'),
                  icon:
                  widget.isHidden ? Icon(Icons.visibility_off) : Icon(Icons.visibility),
                  onPressed: toggleVisibility,
                  focusColor: Color(0xff009999),
                )),
          ),
...
          //flex:1,
          child:   Material(
            elevation: 5.0,
            borderRadius: BorderRadius.circular(30.0),
            color: Color(0xff009999),
            child: MaterialButton(
              key: Key('loginButton'),
              minWidth: MediaQuery.of(context).size.width,
              padding: EdgeInsets.fromLTRB(20.0, 15.0, 20.0, 15.0),
              onPressed: () async {
                setState(() {
                  widget.visible = true;
                });
...
                      context,
                      MaterialPageRoute(builder: (BuildContext context) => homePage),
                    );
                  } else {
                    setState(() {
                      widget.visible=false;
                      msg="Username or password incorrect";

                    });
                  }

                  setState(() {});
                }
...
          //flex:1,
          child:  Material(
            elevation: 5.0,
            borderRadius: BorderRadius.circular(30.0),
            color: Color(0xff009999),
            child: MaterialButton(
              key: Key('registerButton'),
              minWidth: MediaQuery.of(context).size.width,
              padding: EdgeInsets.fromLTRB(20.0, 15.0, 20.0, 15.0),
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => StudentSupChoicePage()),
...
              height: 15,
            ),
          ),
          Expanded(
            //flex:1,
            child:  Container(
              key: Key('divider'),
              margin: EdgeInsets.symmetric(vertical: 10),
              child: Row(
                children: <Widget>[
                  SizedBox(
                    width: 20,
                  ),
...
